# Finova

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env  database.py  main.py  pyproject.toml  requirements.txt  tools.py  workflow.py
backend/scratch/: inspect_yf.py  list_groq_models.py  test_ddg.py  test_ddg_html.py  test_llm_router.py  test_search_improved.py  test_workflow.py  test_workflow_full.py  test_yf_news.py  yf_out.txt
scratch/: test_groq.py  test_tools.py
src/: App.jsx  index.css
src/components/: About.jsx  CTA.jsx  Features.jsx  Footer.jsx  Guide.jsx  Hero.jsx  Navbar.jsx
src/pages/: Auth.jsx  ChatInterface.jsx  Disclaimer.jsx  PrivacyPolicy.jsx  TermsConditions.jsx
src/utils/: financeWorkflow.js
